Moved URL for service API to better location

--- a/templates/default/service_documentation.tt
+++ b/templates/default/service_documentation.tt
@@ -45,6 +45,8 @@
 [%- END %]]
 [%- END %])
 
+For the AWS API documentation, see L<[% c.service_url %]>
+
 Each argument is described in detail in: L<[% c.api %]::[% op_name %]>
 
 Returns: [% out_shape = c.shapename_for_operation_output(op_name); IF (out_shape) %]a L<[% c.api %]::[% out_shape %]> instance[% ELSE %]nothing[% END %]
