Correct service name in method Synopsis Add return value in method synopsis Add optional main input values in method synopsis  #75

--- a/templates/default/callclass_documentation.tt
+++ b/templates/default/callclass_documentation.tt
@@ -14,16 +14,27 @@ You shouldn't make instances of this class. Each attribute should be used as a n
 
 =head1 SYNOPSIS
 
-  my $[% c.service %] = Paws->service('[% c.service | ucfirst %]');
-  $[% c.service %]->[% operation.name %](
+  my $[% c.service %] = Paws->service('[% c.api_ns %]'));
+  [% out_shape = c.shapename_for_operation_output(op_name); IF (out_shape) %]my $[% out_shape %] = [% END -%]
+$[% c.service %]->[% operation.name %](
 [%- out_shape = c.input_for_operation(operation.name) %]
 [%- req_list = out_shape.required.sort %]
 [%- FOREACH out_name IN req_list.sort -%]
 [%- member = c.shape(out_shape.members.$out_name.shape) %]
    [% out_name %] => [% member.example_code -%]
   [%- IF (NOT loop.last) %],
-[% END %]
+  [% END %]
 [%- END %]
+[%- opt_list = c.optional_params_in_shape(out_shape) %]
+[%- IF (opt_list.size > 0) %]
+[%- IF (req_list.size > 0) %], [% END %][
+[%- FOREACH out_name IN opt_list.sort %]
+  [%- member = c.shape(out_shape.members.$out_name.shape) -%]
+  [% out_name %] => [% member.example_code %]
+  [%- IF (NOT loop.last) %],
+  [% END %]
+[%- END %]]
+[%- END %])
   );
 
 Values for attributes that are native types (Int, String, Float, etc) can passed as-is (scalar values). Values for complex Types (objects) can be passed as a HashRef. The keys and values of the hashref will be used to instance the underlying object.
