--- a/templates/default/callclass_documentation.tt
+++ b/templates/default/callclass_documentation.tt
@@ -18,6 +18,8 @@ As an example:
 
 Values for attributes that are native types (Int, String, Float, etc) can passed as-is (scalar values). Values for complex Types (objects) can be passed as a HashRef. The keys and values of the hashref will be used to instance the underlying object.
 
+[%- IF defined(aws_url) %]For the AWS API documentation, see L<[% aws_url %]>[% END -%]
+
 =head1 ATTRIBUTES
 
 [% FOREACH param_name IN shape.members.keys.sort -%]
