Generate rest-json payload body correctly (jsonify if object) #30

--- a/templates/restjson/callargs_class.tt
+++ b/templates/restjson/callargs_class.tt
@@ -8,7 +8,7 @@ package [% c.api %]::[% operation.name %];
   [%- IF (shape.members.$param_name.location == 'header') %], traits => ['ParamInHeader'], header_name => '[% shape.members.$param_name.locationName %]'
   [%- ELSIF (shape.members.$param_name.location == 'querystring') %], traits => ['ParamInQuery'], query_name => '[% shape.members.$param_name.locationName %]'
   [%- ELSIF (shape.members.$param_name.location == 'uri') %], traits => ['ParamInURI'], uri_name => '[% shape.members.$param_name.locationName %]'
-  [%- ELSIF (shape.members.$param_name.streaming == 1) %], traits => ['ParamInBody']
+  [%- ELSIF (shape.members.$param_name.streaming == 1 || member.streaming == 1) %], traits => ['ParamInBody']
   [%- ELSIF (shape.members.$param_name.locationName) %], traits => ['NameInRequest'], request_name => '[% shape.members.$param_name.locationName %]'
   [%- END %]
   [%- IF (c.required_in_shape(shape,param_name)) %], required => 1[% END %]);
