--- a/templates/default/object.tt
+++ b/templates/default/object.tt
@@ -1,7 +1,7 @@
 [%- -%]
 package [% inner_class %];
   use Moose;
-[% INCLUDE foreach_class.tt source="object" -%]
+[% INCLUDE shape_attributes.tt source="object" -%]
 1;
 
 [% iclass=shape; INCLUDE 'innerclass_documentation.tt' %]
