--- a/templates/restxml/callargs_class.tt
+++ b/templates/restxml/callargs_class.tt
@@ -2,7 +2,8 @@
 [%- shape = c.input_for_operation(op_name) %]
 package [% c.api %]::[% op_name %];
   use Moose;
-[% INCLUDE foreach_class.tt source="callargs" -%]
+[% SET include_vars.stream_param = '' -%]
+[% INCLUDE shape_attributes.tt source="callargs" -%]
 
   use MooseX::ClassAttribute;
 
@@ -14,7 +15,7 @@ package [% c.api %]::[% op_name %];
       [%- c.api %]::[% c.shapename_for_operation_output(op_name) -%]
     [%- ELSE -%]Paws::API::Response[% END -%]');
   class_has _result_key => (isa => 'Str', is => 'ro');
-  [% IF (stream_param) %]class_has _stream_param => (is => 'ro', default => '[% c.to_payload_shape_name(stream_param) %]');[% END %]
+  [% IF (include_vars.stream_param) %]class_has _stream_param => (is => 'ro', default => '[% c.to_payload_shape_name(include_vars.stream_param) %]');[% END %]
 1;
 
 [% INCLUDE 'callclass_documentation.tt' %]
