--- a/templates/restxml/callargs_class.tt
+++ b/templates/restxml/callargs_class.tt
@@ -16,6 +16,8 @@ package [% c.api %]::[% op_name %];
     [%- ELSE -%]Paws::API::Response[% END -%]');
   class_has _result_key => (isa => 'Str', is => 'ro');
   [% IF (include_vars.stream_param) %]class_has _stream_param => (is => 'ro', default => '[% c.to_payload_shape_name(include_vars.stream_param) %]');[% END %]
+  [%- IF shape.locationName -%]class_has _top_level_element => (isa => 'Str', is => 'ro', default => '[% shape.locationName %]');[% END %]
+  [% IF shape.xmlNamespace -%]class_has _top_level_namespace => (isa => 'Str', is => 'ro', default => '[% shape.xmlNamespace.uri %]');[%- END %]  
 1;
 
 [% INCLUDE 'callclass_documentation.tt' %]
