Revert "Fix/issue 312"

--- a/templates/query/callresult_class.tt
+++ b/templates/query/callresult_class.tt
@@ -8,7 +8,7 @@ package [% c.api %]::[% c.shapename_for_operation_output(op_name) %];
   [%- member_shape_name = shape.members.$param_name.shape %]
   [%- member = c.shape(member_shape_name) -%]
   has [% param_name %] => (is => 'ro', isa => '[% member.perl_type %]'
-  [%- IF (shape.members.$param_name.locationName); traits.push('NameInRequest') %], request_name => '[% shape.members.$param_name.locationName %]'[% END %]
+  [%- IF (member.locationName); traits.push('NameInRequest') %], request_name => '[% member.locationName %]'[% END %]
   [%- IF (shape.members.$param_name.streaming == 1); traits.push('ParamInBody'); END %]
   [%- IF (member.type == 'list' and member.member.locationName); traits.push('NameInRequest') %], request_name => '[% member.member.locationName %]'[% END %]
   [%- encoder = c.encoders_struct.$member_shape_name; IF (encoder); traits.push('JSONAttribute') %], decode_as => '[% encoder.encoding %]', method => '[% encoder.alias %]'[% END %]
