--- a/templates/json/map_str_to_obj.tt
+++ b/templates/json/map_str_to_obj.tt
@@ -1,9 +1,26 @@
 [%- -%]
 package [% inner_class %];
-  use Moose;
+  use Moo;
   with 'Paws::API::StrToObjMapParser';
+  use Types::Standard qw//;
+  use Type::Utils qw/class_type/;
+[%- SET k =  class_type_info.keys.first %]
+  my [% k %] = class_type '[% class_type_info.$k %]';
 
-  has Map => (is => 'ro', isa => '[% map_class %]');
+  has Map => (is => 'ro', isa => [% map_class %]);
+
+  sub params_map {
+    my $params1 = {
+                    types => {
+                               'Map' => {
+                                          type => '[% map_class %]',
+                                          class => '[% class_type_info.$k %]',
+                                        },
+                             },
+                  };
+    return $params1;
+  }
+
 1;
 
 [% INCLUDE 'map_str_to_whatever.tt' %]
