--- a/templates/restxml/callresult_class.tt
+++ b/templates/restxml/callresult_class.tt
@@ -9,10 +9,12 @@ package [% c.api %]::[% op_name %];
   has [% param_name %] => (is => 'ro', isa => '[% member.perl_type %]'
   [%- IF (shape.members.$param_name.locationName) %]
     [%- IF (shape.members.$param_name.location == 'header') %], traits => ['ParamInHeader'], header_name => '[% shape.members.$param_name.locationName %]'
+	[%- ELSIF (shape.members.$param_name.location == 'statusCode') %], traits => ['ParamInResponse'], response_name => '[% shape.members.$param_name.locationName %]'
     [%- ELSIF (shape.members.$param_name.location == 'headers') %], traits => ['ParamInHeaders'], header_prefix => '[% shape.members.$param_name.locationName %]'
     [%- ELSIF (shape.members.$param_name.location == 'querystring') %], traits => ['ParamInQuery'], query_name => '[% shape.members.$param_name.locationName -%]' 
-    [%- ELSIF (shape.members.$param_name.location == 'uri') %], traits => ['ParamInURI'], uri_name => '[% shape.members.$param_name.locationName -%]' 
-    [%- ELSE %], traits => ['NameInRequest'], request_name => '[% shape.members.$param_name.locationName %]'[%- END -%][%- END -%]
+    [%- ELSIF (shape.members.$param_name.location ==        'uri') %], traits => ['ParamInURI']    , uri_name     => '[% shape.members.$param_name.locationName -%]' 
+    [%- ELSIF (shape.members.$param_name.location == 'statusCode') %], traits => ['NameInResponse'], reponse_name => '[% shape.members.$param_name.locationName %]'
+	[%- ELSE %],                                                       traits => ['NameInRequest'] , request_name => '[% shape.members.$param_name.locationName %]'[%- END -%][%- END -%]
   [%- IF (shape.members.$param_name.streaming == 1) %], traits => ['ParamInBody'][% stream_param = param_name %][% END %]
   [%- IF (c.required_in_shape(shape,param_name)) %], required => 1[% END %]);
 [% END %]
