--- a/templates/restjson/map_str_to_native.tt
+++ b/templates/restjson/map_str_to_native.tt
@@ -1,9 +1,24 @@
 [%- -%]
 package [% inner_class %];
-  use Moose;
+  use Moo;
   with 'Paws::API::StrToNativeMapParser';
+  use Types::Standard qw/[% base_types.unique.join(' ') %]/;
+[%- SET k =  class_type_info.keys.first %]
+  use [% c.typelibrary_name %] qw/[% k %]/;
 
-  has Map => (is => 'ro', isa => '[% map_class %]');
+  has Map => (is => 'ro', isa => [% map_class %]);
+
+  sub params_map {
+    my $params1 = {
+                    types => {
+                               'Map' => {
+                                          type => '[% map_class %]',
+                                          class => '[% class_type_info.$k %]',
+                                        },
+                             },
+                  };
+    return $params1;
+  }
 1;
 
 [% INCLUDE 'map_str_to_whatever.tt' %]
