--- a/templates/json/callresult_class.tt
+++ b/templates/json/callresult_class.tt
@@ -7,7 +7,7 @@ package [% c.api %]::[% c.shapename_for_operation_output(op_name) %];
 [% FOREACH param_name IN shape.members.keys.sort;
   member = c.shape(shape.members.$param_name.shape);
   attr_str.$attr_ind = "has $param_name => (is => 'ro', isa => ${member.perl_type}";
-  IF (c.required_in_shape(shape,param_name)); attr_str.$attr_ind = attr_str.$attr_ind _ ", required => 1);"; ELSE; attr_str.$attr_ind = attr_str.$attr_ind _ ");"; END;
+  IF (c.required_in_shape(shape,param_name)); attr_str.$attr_ind = attr_str.$attr_ind _ ", required => 1);"; params_hash.IsRequired.$param_name = 1; ELSE; attr_str.$attr_ind = attr_str.$attr_ind _ ");"; END;
 
   IF (shape.members.${param_name}.locationName); params_hash.NameInRequest.$param_name = shape.members.${param_name}.locationName; END;
   IF (shape.members.$param_name.streaming == 1); params_hash.ParamInBody.push(param_name); END;
