--- a/templates/restxml/callresult_class.tt
+++ b/templates/restxml/callresult_class.tt
@@ -8,7 +8,7 @@ package [% c.api %]::[% op_name %];
 [% FOREACH param_name IN shape.members.keys.sort;
   member = c.shape(shape.members.$param_name.shape);
   attr_str.$attr_ind = "has $param_name => (is => 'ro', isa => ${member.perl_type}";
-  IF (c.required_in_shape(shape,param_name)); attr_str.$attr_ind = attr_str.$attr_ind _ ", required => 1);"; ELSE; attr_str.$attr_ind = attr_str.$attr_ind _ ");"; END;
+  IF (c.required_in_shape(shape,param_name)); attr_str.$attr_ind = attr_str.$attr_ind _ ", required => 1);"; params_hash.IsRequired.$param_name = 1; ELSE; attr_str.$attr_ind = attr_str.$attr_ind _ ");"; END;
   IF (shape.members.$param_name.locationName);
     IF (shape.members.$param_name.location == 'header'); params_hash.ParamInHeader.$param_name = shape.members.$param_name.locationName;
     ELSIF (shape.members.$param_name.location == 'headers'); params_hash.ParamInHeaders.$param_name = shape.members.$param_name.locationName;
