--- a/templates/query/callresult_class.tt
+++ b/templates/query/callresult_class.tt
@@ -1,10 +1,10 @@
+# Generated from callresult_class.tt
+
 [%- operation = c.result_for_operation(op_name) %]
 [%- shape = c.result_for_operation(op_name) %]
 [%- IF (shape) %]
 package [% c.api %]::[% c.shapename_for_operation_output(op_name) %];
   use Moo;
-  use JSON::MaybeXS;
-  use URL::Encode;
 [%- attr_str = []; attr_types = ['Str' ]; attr_ind = 0; class_types = {}; params_hash = { 'types' => { '_request_id' => { 'type' => 'Str' } } }; -%]
 [% FOREACH param_name IN shape.members.keys.sort;
   member_shape_name = shape.members.$param_name.shape;
@@ -19,10 +19,7 @@ package [% c.api %]::[% c.shapename_for_operation_output(op_name) %];
   FOREACH k IN member.class_type_info.keys; class_types.$k = member.class_type_info.$k; params_hash.types.$param_name.class = member.class_type_info.$k; END;
   IF (member.type == 'list' and member.member.locationName); params_hash.NameInRequest.$param_name = member.member.locationName; END;
   encoder = c.encoders_struct.$member_shape_name; IF (encoder);
-    SET attr_ind = attr_ind + 1;
-    attr_str.$attr_ind = "has ${encoder.alias}_decode_as => ( is => 'ro', isa => Str, default => sub { return '${encoder.encoding}' });";
-    SET attr_ind = attr_ind + 1;
-    attr_str.$attr_ind = "has ${encoder.alias} => ( is => 'lazy', builder => sub { my \$self = shift; if(\$self->${encoder.alias}_decode_as eq 'JSON') { return decode_json(\$self->$param_name); } else { return decode_json(URL::Encode::url_decode(\$self->$param_name)); } });";
+    PROCESS encoder_json_attributes.tt;
     END;
   SET attr_ind = attr_ind + 1;
 END -%]
