--- a/templates/json/service_class.tt
+++ b/templates/json/service_class.tt
@@ -1,3 +1,5 @@
+# Generated from json/service_class.tt
+
 [%- IF (c.enums.size) -%]
 #use Moose::Util::TypeConstraints;
 [%- FOR enum_name IN c.enums.keys.sort %]
