--- a/templates/default/map_enum.tt
+++ b/templates/default/map_enum.tt
@@ -1,3 +1,5 @@
+# Generated from default/map_enum.tt
+
 [%- -%]
 package [% inner_class %];
   use Moo;
@@ -7,8 +9,10 @@ package [% inner_class %];
   class_has xml_keys =>(is => 'ro', default => '[% iclass.key.locationName || 'key' %]');
   class_has xml_values =>(is => 'ro', default => '[% iclass.value.locationName || 'value' %]');
 
-[%- member = c.shape(iclass.value.shape); -%]
-  use Types::Standard qw/[% member.perl_type %]/;
+[%- member = c.shape(iclass.value.shape); class_types = {};
+  IF member.class_type_info.keys.size; SET enum_type = member.class_type_info.keys.0; class_types.$enum_type = member.class_type_info.$enum_type; END; -%]
+  use Types::Standard qw/[% member.base_types.keys.join(" ") %]/;
+  use [% c.typelibrary_name %] qw/[% enum_type %]/;
 [% FOREACH param_name=keys_shape.enum.sort -%]
   has [% param_name %] => (is => 'ro', isa => [% member.perl_type %]);
 [% END -%]
@@ -19,6 +23,9 @@ package [% inner_class %];
 [% FOREACH param_name=keys_shape.enum.sort -%]
                                '[% param_name %]' => {
                                           type => '[% member.perl_type %]',
+                                          [%- IF class_types.keys.size -%]
+                                          class => '[% class_types.$enum_type %]',
+                                          [%- END -%]
                                         },
 [% END -%]
                              },
