--- a/templates/json/map_enum.tt
+++ b/templates/json/map_enum.tt
@@ -10,9 +10,9 @@ package [% inner_class %];
   class_has xml_values =>(is => 'ro', default => '[% iclass.value.locationName || 'value' %]');
 
 [%- member = c.shape(iclass.value.shape); class_types = {};
-  FOREACH k IN member.class_type_info.keys; class_types.$k = member.class_type_info.$k; params_hash.types.$param_name.class = member.class_type_info.$k; END; -%]
+  IF member.class_type_info.keys.size; SET enum_type = member.class_type_info.keys.0; class_types.$enum_type = member.class_type_info.$enum_type; END; -%]
   use Types::Standard qw/[% member.base_types.keys.join(" ") %]/;
-  use [% c.typelibrary_name %] qw/[% class_types.keys.join(" ") %]/;
+  use [% c.typelibrary_name %] qw/[% enum_type %]/;
 [% FOREACH param_name=keys_shape.enum.sort -%]
   has [% param_name %] => (is => 'ro', isa => [% member.perl_type %]);
 [% END -%]
@@ -24,7 +24,7 @@ package [% inner_class %];
                                '[% param_name %]' => {
                                           type => '[% member.perl_type %]',
                                           [%- IF class_types.keys.size -%]
-                                          class => '[% class_types.keys.0 %]',
+                                          class => '[% class_types.$enum_type %]',
                                           [%- END -%]
                                         },
 [% END -%]
@@ -32,6 +32,7 @@ package [% inner_class %];
                   };
     return $Params_map;
   }
+
 1;
 
 [% INCLUDE 'map_enum_documentation.tt' %]
