--- a/templates/restjson/map_enum.tt
+++ b/templates/restjson/map_enum.tt
@@ -1,3 +1,5 @@
+# Generated from restjson/map_enum.tt
+
 [%- -%]
 package [% inner_class %];
   use Moo;
@@ -8,9 +10,9 @@ package [% inner_class %];
   class_has xml_values =>(is => 'ro', default => '[% iclass.value.locationName || 'value' %]');
 
 [%- member = c.shape(iclass.value.shape); class_types = {};
-  FOREACH k IN member.class_type_info.keys; class_types.$k = member.class_type_info.$k; params_hash.types.$param_name.class = member.class_type_info.$k; END; -%]
-  use Types::Standard qw/[% member.base_types.keys %]/;
-  use [% c.typelibrary_name %] qw/[% class_types.keys.join(" ") %]/;
+  IF member.class_type_info.keys.size; SET enum_type = member.class_type_info.keys.0; class_types.$enum_type = member.class_type_info.$enum_type; END; -%]
+  use Types::Standard qw/[% member.base_types.keys.join(" ") %]/;
+  use [% c.typelibrary_name %] qw/[% enum_type %]/;
 [% FOREACH param_name=keys_shape.enum.sort -%]
   has [% param_name %] => (is => 'ro', isa => [% member.perl_type %]);
 [% END -%]
@@ -22,7 +24,7 @@ package [% inner_class %];
                                '[% param_name %]' => {
                                           type => '[% member.perl_type %]',
                                           [%- IF class_types.keys.size -%]
-                                          class => '[% class_types.keys.0 %]',
+                                          class => '[% class_types.$enum_type %]',
                                           [%- END -%]
                                         },
 [% END -%]
