--- a/templates/default/paws_pm.tt
+++ b/templates/default/paws_pm.tt
@@ -278,21 +278,16 @@ sub _preload_scanclass {
 
   # If the class is already loaded, we really don't want to be rescanning it
   # this avoid infinite recursion on DynamoDB, for example
-  return if (Moose::Util::find_meta($class));
+  return if ($INC{Module::Runtime::module_notional_filename($class)});
 
   Paws->load_class($class);
 
-  foreach my $att ($class->meta->get_all_attributes){
-    my $tconst = $att->type_constraint;
+  foreach my $att (keys %{$class->params_map->{types} }){
+    my $tclass = $class->params_map->{types}{$att}{class};
 
-    if ($tconst->isa('Moose::Meta::TypeConstraint::Class')) {
+    if ($tclass) {
       # Any attribute that isa class will need to be inspected
-      _preload_scanclass($tconst->class);
-    } elsif ($tconst->isa('Moose::Meta::TypeConstraint::Parameterized') and
-             $tconst->type_parameter->isa('Moose::Meta::TypeConstraint::Class')) {
-      # those attributes can also be found in parametrized 
-      # type constraints (ArrayRef[...], Hashref[...])
-      _preload_scanclass($tconst->type_parameter->class);
+      _preload_scanclass($tclass);
     }
   }
 }
