--- a/templates/restxml/callresult_class.tt
+++ b/templates/restxml/callresult_class.tt
@@ -14,10 +14,13 @@ package [% c.api %]::[% op_name %];
     [%- ELSIF (shape.members.$param_name.location == 'uri') %], traits => ['ParamInURI'], uri_name => '[% shape.members.$param_name.locationName -%]' 
     [%- ELSE %], traits => ['NameInRequest'], request_name => '[% shape.members.$param_name.locationName %]'[%- END -%][%- END -%]
   [%- IF (shape.members.$param_name.streaming == 1) %], traits => ['ParamInBody'][% stream_param = param_name %][% END %]
+  [%- IF (shape.members.$param_name.keep_root == 1) %] [% keep_root = param_name%][% END %]
   [%- IF (c.required_in_shape(shape,param_name)) %], required => 1[% END %]);
 [% END %]
-  [%- IF (stream_param or shape.payload == param_name) %]
+  [%- IF (stream_param or shape.payload == param_name or keep_root) %]
   use MooseX::ClassAttribute;
+  [%- IF (keep_root) %]
+  class_has _keep_root => (is => 'ro', default => '[% keep_root %]');[% END %]
   [%- IF (stream_param) %]
   class_has _stream_param => (is => 'ro', default => '[% c.to_payload_shape_name(stream_param) %]');[% END %]
   [%- IF (shape.payload == param_name) %]
