--- a/templates/default/object.tt
+++ b/templates/default/object.tt
@@ -8,14 +8,21 @@ package [% inner_class %];
   has [% param_name %] => (is => 'ro', isa => '[% member.perl_type %]'
   [%- IF (shape.members.${param_name}.xmlAttribute == 1); traits.push('XMLAtribute'); xml_attributes.push(param_name); %], xml_attribute_name => '[% shape.members.$param_name.locationName %]'
   [%- ELSE %]
-  [%- IF (member.type == 'list' and member.member.locationName.defined) %][% traits.push('NameInRequest','ListNameInRequest') %], request_name => '[% member.member.locationName %]', list_request_name => '[% shape.members.${param_name}.locationName %]' 
-  [%- ELSE %]
+  [%- IF (member.type == 'list' and member.member.locationName.defined) %][% traits.push('NameInRequest','ListNameInRequest') %], request_name => '[% member.member.locationName %]'
+      [%- IF (shape.members.${param_name}.locationName) %], list_request_name => '[% shape.members.${param_name}.locationName %]'
+	  [%- ELSE %]
+	     , list_request_name => '[% param_name %]'
+	  [% END %]  
+#      JSP  member.member.locationName [%  member.member.locationName %]
+#	  JSP  shape.members.${param_name}.locationName [% shape.members.${param_name}.locationName %]
+#	  JSP  param_name [% param_name %]
+ [%- ELSE %]
   [%- IF (shape.members.${param_name}.locationName); traits.push('NameInRequest') %], request_name => '[% shape.members.${param_name}.locationName %]'[% END %]
   [%- IF (shape.members.$param_name.streaming == 1); traits.push('ParamInBody'); END %]
   [%- IF (member.flattened == 1); traits.push('Flatten'); END %]
   [%- encoder = c.encoders_struct.$member_shape_name; IF (encoder); traits.push('JSONAttribute') %], decode_as => '[% encoder.encoding %]', method => '[% encoder.alias %]'[% END %]
   [%- IF (member.members.xmlname and (member.members.xmlname != 'item')) %], traits => ['NameInRequest'], request_name => '[% member.members.xmlname %]'[% END %]
-[% END %]
+[%- END %]
 [%- END %]
 
   [%- IF (traits.size) %], traits => [[% FOREACH trait=traits %]'[% trait %]'[% IF (NOT loop.last) %],[% END %][% END %]][% END -%]
