--- a/templates/restxml/callargs_class.tt
+++ b/templates/restxml/callargs_class.tt
@@ -7,19 +7,16 @@ package [% c.api %]::[% op_name %];
   [%- member = c.shape(shape.members.$param_name.shape) -%]
   [%- traits = [] -%]
   has [% param_name %] => (is => 'ro', isa => '[% member.perl_type %]'
-  [%- IF (shape.members.$param_name.location == 'header') %], header_name => '[% shape.members.$param_name.locationName %]'
-    [%- IF (param_name == 'ContentMD5s'); traits.push('AutoInHeader') %], auto => 'MD5'
-    [%- ELSE; traits.push('ParamInHeader') %]
-  [%- END %]
+  [%- IF (shape.members.$param_name.location == 'header'); traits.push('ParamInHeader') %], header_name => '[% shape.members.$param_name.locationName %]'
   [%- ELSIF (shape.members.$param_name.location == 'headers');     traits.push('ParamInHeaders') %], header_prefix => '[% shape.members.$param_name.locationName %]'
   [%- ELSIF (shape.members.$param_name.location == 'querystring'); traits.push('ParamInQuery') %], query_name => '[% shape.members.$param_name.locationName %]'
   [%- ELSIF (shape.members.$param_name.location == 'uri');         traits.push('ParamInURI') %], uri_name => '[% shape.members.$param_name.locationName %]'
-  [%- ELSIF (shape.members.$param_name.streaming == 1);            traits.push('ParamInBody'); %][% stream_param = param_name -%]
-  [%- ELSE %][% IF (shape.members.$param_name.locationName != '') -%]
-               [%- IF (shape.members.$param_name.locationName == 'x-amz-meta-') %]
-               [%- ELSIF (shape.members.$param_name.locationName != param_name); traits.push('NameInRequest'); %], request_name => '[% shape.members.$param_name.locationName -%]'
-               [%- END -%]
-             [%- END -%]
+  [%- ELSIF (shape.members.$param_name.streaming == 1);            traits.push('ParamInBody'); %][% stream_param = param_name %]
+  [%- ELSE %][% IF (shape.members.$param_name.locationName != '') %]
+  [%- IF (shape.members.$param_name.locationName == 'x-amz-meta-') %]
+  [%- ELSIF (shape.members.$param_name.locationName != param_name); traits.push('NameInRequest'); %], request_name => '[% shape.members.$param_name.locationName %]'
+  [%- END -%]
+  [%- END -%]
   [%- END -%]
   [%- IF (traits.size) %], traits => [[% FOREACH trait=traits %]'[% trait %]'[% ',' IF (NOT loop.last) %][% END %]][% END -%]
   [%- IF (shape.members.$param_name.xmlNamespace) %] [% namspace_uri = shape.members.$param_name.xmlNamespace.uri %][% END %] 
